--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <meta property="og:title" content="GroMo - Affordable Websites for Local Businesses" />
     <meta property="og:description" content="Professional websites for local businesses starting at ₹699. Transform your tea stall, hotel, gym, or restaurant with GroMo's digital solutions." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://lovable.dev/gromo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://lovable.dev/gromo.png" />
   </head>
 
   <body>
