--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <!-- Open Graph -->
     <meta property="og:title" content="GroMo - Affordable Websites for Local Businesses" />
     <meta property="og:description" content="Professional websites for local businesses starting at ₹699. Transform your tea stall, hotel, gym, or restaurant with GroMo's digital solutions." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/gromo.png" />
+    <meta property="og:type" content="website" /> 
+    <link rel="shortcut icon" href="gromo.png" type="image/x-icon">
     <meta property="og:url" content="https://gromosite.vercel.app/" />
 
     <!-- Twitter Card -->
