--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="GroMo" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="https://lovable.dev/gromo.png" />
+    <link rel="icon" type="image/png" href="gromo.png" />
 
     <!-- Open Graph -->
     <meta property="og:title" content="GroMo - Affordable Websites for Local Businesses" />
